--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ body {
   max-width: 1200px;
 }
 
-header, nav, address, .resume-section h2, .technologies h2, .references, footer {
+header, nav, address, footer {
   text-align: center;
 }
 
@@ -22,7 +22,7 @@ nav {
   margin-bottom: 1%;
 }
 
-.resume-section, .technologies, .references {
+.resume-section, .code-examples {
   margin: 0 auto;
   max-width: 80%;
 }
@@ -35,7 +35,7 @@ h2 {
   font-size: 2em;
 }
 
-nav a, .resume-section ul, .technologies ul, .resume-section p, .references p, address {
+nav a, .resume-section ul, .resume-section p, address, .code-examples h3, .code-examples p, .code-examples a {
   font-size: 1.5em;
 }
 
