--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ body {
 
 #wrapper {
   background-color: #c0c0c0;
+  border-radius: 2%;
   margin: 0 auto;
   width: 100%;
   max-width: 1200px;
@@ -54,4 +55,9 @@ ul {
 
 li {
   margin-bottom: 0.5%;
+}
+
+footer {
+  height: 100px;
+  width: 100%;
 }
