--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,20 @@
 * {
   box-sizing: border-box;
+  font-family: 'Tinos', serif;
 }
 
 body {
-  background-color: #666666;
-  font-family: 'Tinos', serif;
+  background-color: #3a3a3a;
 }
 
 #wrapper {
   background-color: #c0c0c0;
-  border-radius: 2%;
   margin: 0 auto;
   width: 100%;
   max-width: 1200px;
 }
+
+/* Header and Nav */
 
 header {
   padding-top: 20px;
@@ -23,14 +24,66 @@ header, nav, address, footer {
   text-align: center;
 }
 
-nav {
-  margin-bottom: 1%;
+nav ul {
+  list-style-type: none;
+  padding: 0;
 }
 
-.resume-section, .code-examples {
-  margin: 0 auto;
-  max-width: 80%;
+nav ul li {
+  margin: 0;
 }
+
+nav a {
+  color: #000;
+  font-size: 1.5em;
+  font-weight: normal;
+  text-decoration: none;
+}
+
+#nav-container a, #nav-container button {
+  color: white;
+  display: block;
+  font-size: 1.5em;
+  font-weight: normal;
+  padding: 0.5em 1em;
+  text-decoration: none;
+  text-align: center;
+}
+
+#nav-container {
+  background-color: #3a3a3a;
+  display: block;
+  overflow: hidden;
+  position: relative;
+}
+  
+#nav-menu {
+  display: none;
+  text-align: center;
+}
+
+#nav-menu ul {
+  margin: 0;
+}
+  
+#nav-container button.icon {
+  background: #000;
+  border: none;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+#nav-container a:hover, #nav-container button:hover {
+  background-color: #ddd;
+  color: #000;
+}
+
+#nav-active {
+  background-color: #000;
+}
+
+/* Content */
 
 h1 {
   font-size: 2.5em;
@@ -40,25 +93,32 @@ h2 {
   font-size: 2em;
 }
 
-nav a, .resume-section ul, .resume-section p, address, .code-examples h3, .code-examples p, .code-examples a {
+.resume-section, .code-examples {
+  margin: 0 auto;
+  max-width: 80%;
+}
+
+nav a,
+.resume-section ul,
+.resume-section p,
+address,
+.code-examples h3,
+.code-examples p,
+.code-examples a,
+.code-examples li::marker {
   font-size: 1.5em;
 }
 
 a, a:visited {
-  color: #000000;
+  color: #000;
 }
 
-nav a {
-  margin: 1%;
-}
-
-ul {
-  list-style-type: none;
-  padding: 0;
-}
-
-li {
+.resume-section li {
   margin-bottom: 0.5%;
+}
+
+address {
+  padding-top: 5%;
 }
 
 footer {
